# argus

./: .dockerignore  .env  Cargo.toml  DESIGN_CHOICES.md  Dockerfile  EVALUATION.md  LICENSE  README.md  deployment.yaml
src/: lib.rs  main.rs  service.rs
src/analytics/: mod.rs
src/api/: mod.rs
src/cex/: binance.rs  coinbase.rs  kraken.rs  mod.rs
src/config/: mod.rs
src/dex/: mod.rs
src/dex/aerodrome/: mod.rs  pool.rs
src/dex/uniswap_v4/: mod.rs  pool.rs  types.rs
src/models/: mod.rs
src/rpc/: mod.rs
src/utils/: mod.rs
